# ISP_RAWtoRGB

./: CMakeLists.txt  README.md
raw_images/: 0.raw  1.raw  2.raw  3.raw
src/: ImageProcessor.cpp  ImageProcessor.h  main.cpp
src/Inference/: Infer.cpp  Infer.h
src/postprocess/: postprocess.cpp  postprocess.h
src/preprocess/: preprocess.cpp  preprocess.h
